# ChessTrix

./: .gitignore  CMakeLists.txt  Chesstrix.code-workspace  README.md  Run-Chesstrix.bat  index.html  package-lock.json  package.json  tsconfig.json
cpp/: CMakeLists.txt
cpp/bindings/: wasm_bindings.cpp
cpp/include/chesstrix/: Bishop.hpp  Board.hpp  ChessEngine.hpp  Fen.hpp  Game.hpp  GameAnalyzer.hpp  King.hpp  Knight.hpp  Move.hpp  MoveGenerator.hpp  Pawn.hpp  Piece.hpp  Player.hpp  Position.hpp  Queen.hpp  Rook.hpp
cpp/src/: Bishop.cpp  Board.cpp  Fen.cpp  Game.cpp  GameAnalyzer.cpp  King.cpp  Knight.cpp  MoveGenerator.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
cpp/tests/: cpp_core_tests.cpp
electron/: main.ts  preload.ts  stockfishService.ts  tsconfig.json
engines/stockfish/: README.md
public/app-assets/section-icons/: LICENSE.txt
scripts/: build-cpp.mjs  build-openings.js  build-puzzle-sample.js  build-wasm.mjs  compare-wasm-chessjs.mjs  install-stockfish.js  run-electron.js  test-cpp.mjs
src/: main.tsx  vite-env.d.ts
src/app/: App.css  App.tsx  Poster.tsx  poster.css  routes.tsx
src/assets/avatars/: README.md
src/assets/icons/: README.md
src/components/achievements/: AchievementsScreen.tsx  achievements.css
src/components/analysis/: AnalysisCard.tsx  AnalysisScreen.tsx  EvaluationBar.tsx  ReviewScreen.tsx  analysis.css
src/data/: countries.ts  puzzles.json
src/game/: pieceSets.ts  settings.ts  sounds.ts  timeControls.ts
src/hooks/: useMoveReplayKeys.ts
src/theme/: ThemeProvider.tsx  assetPath.ts  theme.css  themes.ts
(+58 files in other folders)
